# cpn-cli

./: .cz.yaml  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: call-web-deploy.yml  pre-commit.yml  pyright.yml  release-publish.yml
src/cpn_cli/: constants.py
src/cpn_cli/models/: config.py
src/cpn_cli/models/notifcations/: discord.py  telegram.py
src/cpn_cli/modules/: config_reader.py  get_data.py  notify.py  print_console.py
