[project]
authors = [
  { name = "KevinNitroG", email = "kevinnitro@duck.com" },
  { name = "NTGNguyen", email = 'ntgnguyen@duck.com' },
]
description = "cpn cli"
name = "cpn-cli"
requires-python = ">=3.13"
dependencies = ["cpn-core[discord,ocr]==0.5.0"]
dynamic = ["version"]

[project.scripts]
cpn-cli = "cpn_cli:__main__.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpn_cli"]

[tool.hatch.version]
path = "src/cpn_cli/__init__.py"

[dependency-groups]
dev = ["pre-commit>=4.0.1", "commitizen>=4.1.0"]
